@@ -1,5 +1,12 @@
 2008-06-09  Colin Walters  <walters@verbum.org>
 
+	Bug 534515: cleanups
+
+	* src/krb5-auth-dialog.c: Use GOption instead of
+	libgnome.  Patch from Guido Günther.
+
+2008-06-09  Colin Walters  <walters@verbum.org>
+
 	Bug 529220: set dialog icon
 
 	* src/krb5-auth-dialog.c: Set an icon so we
